ENCAPSULATION COMPLETE!!!!!!
slay queen <3